force-app/main/default/objects/Shopping_Manager__c/Shopping_Manager__c.object-meta.xml
<CustomObject>
    <label>Shopping Manager</label>
    <nameField>
        <label>Shopping Manager Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shopping Managers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>