force-app/main/default/objects/Shopping_Manager__c/fields/Manager_ID__c.field-meta.xml
<CustomField>
    <fullName>Manager_ID__c</fullName>
    <label>Manager ID</label>
    <type>AutoNumber</type>
</CustomField>