force-app/main/default/objects/Shopping_Manager__c/fields/Number_of_Orders_Handled__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Orders_Handled__c</fullName>
    <label>Number of Orders Handled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>