force-app/main/default/objects/Shopping_Manager__c/validationRules/Phone_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Number</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(
  REGEX(Contact_Number__c, &quot;^[0-9]{10}$&quot;)
)</errorConditionFormula>
    <errorMessage>Enter correct Number</errorMessage>
</ValidationRule>